fixed hamburger menu/added search bar

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,8 +1,11 @@
 <% layout('layouts/boilerplate')%>
 
-
-<div id="cluster-map"></div>
-<h1>All Campgrounds</h1>
+<div id="cluster-map" class="mb-3 mt-0"></div>
+<h2 class="mb-3" style="text-align: center;">Search among many campgrounds to find what you are looking for!</h1>
+    <form class="d-flex mb-5">
+        <input class="form-control me-2 mr-1" style="height: 20px" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-secondary" type="submit">Search</button>
+      </form>
 <% for (let campground of campgrounds){%>
 <div class="card mb-3">
     <div class="row">
