fixed search bar text

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,7 +3,7 @@
 <div id="cluster-map" class="mb-3 mt-0"></div>
 <h2 class="mb-3" style="text-align: center;">Search among many campgrounds to find what you are looking for!</h1>
     <form class="d-flex mb-5">
-        <input class="form-control me-2 mr-1" style="height: 20px" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control me-2 mr-1" style="height: 20px" type="search" placeholder="Search Camp/Location" aria-label="Search">
         <button class="btn btn-secondary" type="submit">Search</button>
       </form>
 <% for (let campground of campgrounds){%>
