--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,37 +1,68 @@
-<% layout('layouts/boilerplate')%>
+<!DOCTYPE html>
+<html lang="en">
 
-<div id="cluster-map" class="mb-3 mt-0"></div>
-<h2 class="mb-3" style="text-align: center;">Search among many campgrounds to find what you are looking for!</h1>
-    <form class="d-flex mb-5">
-        <input class="form-control me-2 mr-1" style="height: 20px" type="search" placeholder="Search Camp/Location" aria-label="Search">
-        <button class="btn btn-secondary" type="submit">Search</button>
-      </form>
-<% for (let campground of campgrounds){%>
-<div class="card mb-3">
-    <div class="row">
-        <div class="col-md-4">
-            <% if(campground.images.length) { %>
-                <img class="img-fluid" alt="" src="<%=campground.images[0].url%>">
-            <% } else { %>
-                <img class="img-fluid" alt="" src="https://res.cloudinary.com/dvyewdj6e/image/upload/v1615284359/YelpCamp/r77fedesdy3b20ns71pr.jpg">
-            <% } %>  
-        </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <h5 class="card-title"><%= campground.title %> </h5>
-                <p class="card-text"><%= campground.description %></p>
-                <p class="card-text">
-                    <small class="text-muted"><%= campground.location%></small>
-                </p>
-                <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">View <%=campground.title%></a>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>YelpCamp</title>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+            integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+            
+        <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
+        <link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
+        <link rel="stylesheet" href="/stylesheets/app.css">
+    </head>
+
+    <body class="d-flex flex-column vh-100">
+        <%- include('../partials/navbar')%>
+        <div id="cluster-map" class="mb-3 mt-0"></div>
+        <main class="container mt-5">
+            <%- include('../partials/flash')%>
+            <h2 class="mb-3" style="text-align: center;">Search among many campgrounds to find what you are looking for!</h1>
+                <form class="d-flex mb-5">
+                    <input class="form-control me-2 mr-1" style="height: 20px" type="search" placeholder="Search Camp/Location" aria-label="Search">
+                    <button class="btn btn-secondary" type="submit">Search</button>
+                </form>
+            <% for (let campground of campgrounds){%>
+            <div class="card mb-3">
+                <div class="row">
+                    <div class="col-md-4">
+                        <% if(campground.images.length) { %>
+                            <img class="img-fluid" alt="" src="<%=campground.images[0].url%>">
+                        <% } else { %>
+                            <img class="img-fluid" alt="" src="https://res.cloudinary.com/dvyewdj6e/image/upload/v1615284359/YelpCamp/r77fedesdy3b20ns71pr.jpg">
+                        <% } %>  
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title"><%= campground.title %> </h5>
+                            <p class="card-text"><%= campground.description %></p>
+                            <p class="card-text">
+                                <small class="text-muted"><%= campground.location%></small>
+                            </p>
+                            <a class="btn btn-primary" href="/campgrounds/<%=campground._id%>">View <%=campground.title%></a>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-</div>
-<% }%>
+            <% }%>
+        </main>
 
-<script>
-        const mapToken = '<%= process.env.MAPBOX_TOKEN %>';
-        const campgrounds = {features: <%- JSON.stringify(campgrounds) %>}
-</script>
-<script src="/javascripts/clusterMap.js"></script>
+            <%- include('../partials/footer')%>
+            <script>
+                const mapToken = '<%= process.env.MAPBOX_TOKEN %>';
+                const campgrounds = {features: <%- JSON.stringify(campgrounds) %>}
+            </script>
+            <script src="/javascripts/clusterMap.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+                integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+                crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+                integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
+                crossorigin="anonymous"></script>
+            <script src="/javascripts/validateForms.js"></script>
+
+    </body>
+</html>
